--- a/HAWK/.gitignore
+++ b/HAWK/.gitignore
@@ -132,5 +132,7 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,pycharm
 
-HAWK/data/temp/*
-HAWK/data/address-csvs/*
+data/address-csvs/*
+data/lake/*
+data/temp/*
+data/waterfront-address-csvs/*
